<resources>
    <string name="app_name">Greenly</string>
    <string name="app_slogan">This is the new green</string>
    <string name="app_logo">App Logo</string>
    <string name="google_title">GOOGLE</string>
    <string name="facebook_title">FACEBOOK</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="about_greenly_title">About Greenly</string>
    <string name="about_greenly_paragraph">Greenly is here to make your city greener. Greenly allows you to recycle and get rewarded
for your recycling efforts. You can recycle: metal, glass, paper, plastic, cartons/tetrapak,
        and batteries.\nGreenly shows you which materials are recyclable and where, whether drop-off or collection.
Greenly gives you all the information needed to recycle. You can see your points statements
and all your vouchers within the app.</string>
    <string name="contact_us_email">contact@greenly.co.za</string>
    <string name="greenly_website_link">www.greenly.co.za</string>
    <string name="log_out_title">Log Out</string>

    <string name="terms_and_conditions_description">Before you become a recycling master, \nplease read through our\n<a href="">terms &amp; conditions.</a>\n\nOnce you’re happy you can accept below and start recycling.</string>
    <string name="terms_and_conditions_checkbox_text">I agree to Greenly’s terms &amp; conditions</string>
    <string name="terms_and_conditions_button_text">Start Recycling</string>
    <string name="location_johannesburg_title">Johannesburg</string>
    <string name="location_pin">Location Pin</string>

    <string name="metal_title">Metal</string>
    <string name="plastic_title">Plastic</string>
    <string name="paper_title">Paper</string>
    <string name="glass_title">Glass</string>
    <string name="batteries_title">Batteries</string>
    <string name="cartons_titles">Cartons/\nTetrapak</string>

    <string name="recycle_menu_title">Recycle</string>
    <string name="scan_menu_title">Scan</string>
    <string name="voucher_menu_title">Voucher</string>
    <string name="settings_menu_title">Settings</string>
    <string name="scan_title">Scan</string>
    <string name="scan_view_points"><font color='#1b5e20'>View Points</font></string>
    <string name="scan_done"><font color='#1b5e20'>Done</font></string>
    <string name="scan_successful">Your scan was successful! \n Thank you for recycling and making your city greenly.</string>
    <string name="tab_history_title">History</string>
    <string name="tab_vouchers_title">Vouchers</string>
</resources>
