<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recycle"
        android:icon="@drawable/ic_active_recycling"
        android:title="@string/recycle_menu_title"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/scan"
        android:icon="@drawable/ic_qr_active"
        android:title="@string/scan_menu_title"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/vouchers"
        android:icon="@drawable/ic_vouchers_active"
        android:title="@string/voucher_menu_title"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_inactive"
        android:title="@string/settings_menu_title"
        app:showAsAction="always|withText"/>
</menu>