<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_"
    tools:context=".View.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="63dp" />

    <ImageView
        android:id="@+id/imageviewLocationPin"
        android:layout_width="28dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/location_pin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/textviewMainLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/location_johannesburg_title"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageviewLocationPin"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="78dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imagebuttonMetal"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainLocation"
        app:srcCompat="@drawable/ic_can_circle_3x" />

    <TextView
        android:id="@+id/textviewMainCans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/metal_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonMetal" />

    <ImageButton
        android:id="@+id/imagebuttonGlass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/imagebuttonMetal"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainLocation"
        app:srcCompat="@drawable/ic_glass_circle_3x" />

    <TextView
        android:id="@+id/textviewMainGlass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/glass_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonGlass" />

    <ImageButton
        android:id="@+id/imagebuttonPaper"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagebuttonGlass"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainLocation"
        app:srcCompat="@drawable/ic_paper_circle_3x" />

    <TextView
        android:id="@+id/textviewMainPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonPaper" />

    <ImageButton
        android:id="@+id/imagebuttonPlastic"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainCans"
        app:srcCompat="@drawable/ic_plastic_circle_3x" />

    <TextView
        android:id="@+id/textviewMainPlastic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/plastic_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonPlastic" />

    <ImageButton
        android:id="@+id/imagebuttonCartons"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/imagebuttonPlastic"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainGlass"
        app:srcCompat="@drawable/ic_cartons_circle_3x" />

    <TextView
        android:id="@+id/textviewMainCartons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/cartons_titles"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonCartons" />

    <ImageButton
        android:id="@+id/imagebuttonBatteries"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagebuttonCartons"
        app:layout_constraintTop_toBottomOf="@+id/textviewMainPaper"
        app:srcCompat="@drawable/ic_batteries_circle_3x" />

    <TextView
        android:id="@+id/textviewMainBatteries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/batteries_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonBatteries" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="33dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="229dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="284dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="232dp" />
</android.support.constraint.ConstraintLayout>