<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b5e20"
    tools:context=".View.TermsAndConditionsActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="122dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/terms_and_conditions_description"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="34dp"
        android:buttonTint="@color/colorAccent"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonTermsAndConditions"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="275dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms_and_conditions_checkbox_text"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonTermsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonTermsAndConditions"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:background="@drawable/default_button_rounded_corners"
        android:layout_marginBottom="254dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:text="@string/terms_and_conditions_button_text"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

</android.support.constraint.ConstraintLayout>